--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ nav {
 /* First Section Styles */
 
 .first-section {
-  padding: 15vh 2rem;
+  padding: 13vh 2rem;
   background-color: #f5bc9f;
 }
 
@@ -43,10 +43,19 @@ nav {
   font-size: 2.1rem;
   line-height: 2.25rem;
   font-weight: 800;
+  background: -webkit-linear-gradient(
+    rgba(247, 147, 30, 1) 0%,
+    rgba(255, 0, 255, 1) 35%,
+    rgba(94, 0, 255, 1) 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .fstagline {
   font-family: "Montserrat", sans-serif;
+  color: white;
+  font-weight: 600;
 }
 
 .fsbgs {
@@ -56,23 +65,19 @@ nav {
 .topshape {
   position: absolute;
   width: 100vw;
-  height: 12vh;
+  height: 8vh;
   top: 0;
 }
 
 .bottomshape {
   position: absolute;
   width: 100vw;
-  height: 12vh;
+  height: 8vh;
   bottom: 0;
 }
 
 .fsboxes {
   margin-top: 2rem;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; */
 }
 
 .fsbox {
@@ -117,11 +122,15 @@ nav {
 }
 
 @media only screen and (min-width: 889px) {
-
   .fsheading {
     width: 70vw;
     font-size: 3.25rem;
     line-height: 5rem;
+  }
+
+  .first-section {
+    padding: 22vh 2rem;
+    background-color: #f5bc9f;
   }
 
   .fstagline {
@@ -132,6 +141,17 @@ nav {
   .fsboxes {
     display: grid;
     grid-template-columns: 33% 33% 33%;
+  }
+
+  .topshape {
+    height: 12vh;
+  }
+
+  .bottomshape {
+    position: absolute;
+    width: 100vw;
+    height: 12vh;
+    bottom: 0;
   }
 }
 
@@ -151,4 +171,3 @@ nav {
     grid-template-columns: 25% 25% 25% 25%;
   }
 }
-
