--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -192,3 +192,39 @@ html {
     }
   }
 }
+
+
+////////////////////////////
+
+.line-btn {
+  &__box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2rem;
+  }
+
+  &__link {
+
+    &:link,
+    &:visited {
+      font-size: 2rem;
+      color: #82b440;
+      border-bottom: 1px solid #82b440;
+      padding: 3px;
+      transition: all 0.2s;
+      font-weight: 500;
+      line-height: 1.6;
+    }
+
+    &:hover {
+      background: #82b440;
+      color: #fff;
+      padding: 3px 1.5rem;
+      border-radius: 5px;
+      box-shadow: 0 1rem 2rem rgba($color: #000000, $alpha: 0.15);
+      transform: translateY(-3px);
+      border-bottom: 1px solid #82b440;
+    }
+  }
+}
