--- a/assets/sass/_navbar.scss
+++ b/assets/sass/_navbar.scss
@@ -3,7 +3,7 @@
 /*=================================================*/
 
 .navigation {
-  max-width: 96vw;
+  // max-width: 96vw;
   background-color: #fff !important;
   position: relative;
   -webkit-transition: all 0.4s;
