--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -360,8 +360,8 @@ nav {
                 }
 
                 &::after {
-                    font-family: 'Ionicons';
-                    content: '\f218';
+                    // font-family: 'Ionicons';
+                    content: '\F128';
                     position: absolute;
                     float: right;
                     right: 1.6rem;
